--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,12 @@
 body {
 	margin: 0;
 	padding: 0;
-	
 	font-family: 'Roboto', arial, sans-serif;
 	background-color: white;
-    color: #000000;
+	color: #000000;
 	font-weight: 400;
 	font-size: 16px;
-    line-height: 24px;
+	line-height: 24px;
 }
 
 p,
@@ -23,7 +22,7 @@ a {
 }
 
 ul {
-    list-style: none;
+	list-style: none;
 }
 
 .main-header {
@@ -40,7 +39,7 @@ ul {
 	line-height: 30px;
 	font-weight: 500;
 	color: black;
-	text-transform: uppercase;	
+	text-transform: uppercase;
 }
 
 .shop-item {
@@ -54,8 +53,8 @@ ul {
 
 .site-navigation a:hover {
 	color: #fb565a;
-	
 }
+
 .site-navigation a:active {
 	color: #c0c0c0;
 }
@@ -68,6 +67,7 @@ ul {
 .cart-navigation a:hover {
 	color: #fb565a;
 }
+
 .cart-navigation a:active{
 	color: #c0c0c0;
 }
@@ -83,13 +83,13 @@ ul {
 
 .cart-link::before {
 	content: "";
-	
+
 	position: absolute;
 	top: 7px;
 	left: 45px;
 	width: 15px;
 	height: 15px;
-	
+
 	background-image: url("../img/cart-icon.svg");
 	background-repeat: no-repeat;
 	background-position: 0 0;
@@ -126,7 +126,7 @@ ul {
 	text-transform: uppercase;
 	text-align: center;
 	text-decoration: none;
-  
+
 	background-color: #fb565a;
 	border-radius: 3px;
 	border: none;
@@ -185,7 +185,6 @@ ul {
 	background-color: #e5a722;
 }
 
-
 .detail-title {
 	font-size: 45px;
 	line-height: 45px;
@@ -204,32 +203,34 @@ table td {
 	color: #283136;
 }
 
-.brand-item {
+.brand-item-image {
 	opacity: 0.2;
 }
 
-.brand-item:hover {
+.brand-item-image:hover {
 	opacity: 1;
 }
 
-.brand-item:active {
+.brand-item-image:active {
 	opacity: 0.1;
-}	
+}
 
 .filter  fieldset {
 	border: none;
 }
+
 .title-contacts,
 .filter legend {
 	font-size: 18px;
 	line-height: 30px;
 	font-weight: 700;
 }
+
 .filter ul {
-  list-style: none;
-  line-height: 20px;
-  font-size: 16px;
-  font-weight: 400;
+	list-style: none;
+	line-height: 20px;
+	font-size: 16px;
+	font-weight: 400;
 }
 
 .footer-title {
@@ -257,6 +258,7 @@ table td {
 	font-weight: 700;
 	text-transform: uppercase;
 }
+
 .arrow,
 .catalog-option-active {
 	color: #000000;
@@ -266,11 +268,13 @@ table td {
 	font-weight: 400;
 	text-transform: uppercase;
 }
+
 .arrow:hover,
 .catalog-option-active:hover {
 	color: #000000;
 	opacity: 0.6;
 }
+
 .arrow:focus,
 .catalog-option-active:focus {
 	color: #000000;
@@ -282,11 +286,11 @@ table td {
 .catalog-btn:active {
 	color: #ffffff;
 }
-  
+
 /*Сеточные стили*/
 
 html,
-body {	
+body {
 	box-sizing: border-box;
 }
 
@@ -305,29 +309,27 @@ img {
 	height: auto;
 }
 
-.main-header {	
-	min-height: 0px; 
-	padding-top: 49px; 
+.main-header {
+	min-height: 0px;
+	padding-top: 49px;
 }
 
-.container {	
+.container {
 	width: 1200px;
-	margin: 0 auto;	
-	padding: 0 20px; 
+	margin: 0 auto;
+	padding: 0 20px;
 }
 
 .main-navigation {
 	display: flex;
 	padding: 0;
-	margin: 0;	
+	margin: 0;
 }
 
 .main-header-logo {
 	width: 165px;
 	height: 65px;
 	margin-right: 195px;
-	
-	
 }
 
 .site-navigation {
@@ -336,7 +338,7 @@ img {
 	display: flex;
 	align-items: center;
 	flex-wrap: wrap;
-	
+
 	margin-top: 19px;
 	margin-bottom: 10px;
 }
@@ -351,9 +353,7 @@ img {
 
 .site-navigation {
 	width: 450px;
-	
 	margin-right: 150px;
-	
 	list-style: none;
 }
 
@@ -361,15 +361,14 @@ img {
 	width: 160px;
 	text-align: right;
 	vertical-align: bottom;
-	margin-top: 27px;	
+	margin-top: 27px;
 }
 
 .option-offer {
 	margin: 0;
 	padding: 0;
 	margin-top: 82px;
-	margin-bottom: 
-}	
+}
 
 .offer-list {
 	display: flex;
@@ -405,7 +404,7 @@ img {
 	padding: 0;
 	display: flex;
 	margin-bottom: 35px;
-}	
+}
 
 
 hr {
@@ -414,7 +413,6 @@ hr {
 	border: none;
 	border-bottom: 2px solid #eeeeee;
 	margin-top: 80px;
-	
 }
 
 .detail-left-column {
@@ -457,7 +455,7 @@ hr {
 .text-order:before {
 	content: "";
 	position: absolute;
-	
+
 	top: 10px;
 	left: -35px;
 
@@ -500,7 +498,6 @@ sup {
 table {
 	margin: 0;
 	padding: 0;
-	
 }
 
 td,
@@ -509,7 +506,6 @@ th {
 	margin: 0;
 	padding: 14px 14px 14px 2px ;
 	text-align: left;
-	
 }
 
 .brand-menu{
@@ -523,16 +519,14 @@ th {
 .brand {
 	padding: 0;
 	margin: 0;
-	display: flex;	
-	justify-content: ;
-	align-items: center;
-	flex-wrap: wrap;	
+	display: flex;
+	flex-wrap: wrap;
 }
 
 .brand-item-image {
 	display: block;
-	margin-top: 15px;
-	padding: 0 30px;	
+	margin-top: 20px;
+	padding: 0 30px;
 }
 
 .image-item-1 {
@@ -543,7 +537,7 @@ th {
 
 .image-item-2 {
 	display: block;
-	margin-top: 5px;
+	margin-top: 24px;
 	padding: 0 35px;
 }
 
@@ -557,16 +551,13 @@ th {
 	position: relative;
 	margin: 0;
 	padding: 0;
-	margin-right: 40px;  
-	padding: 0px 0px;
+	margin-right: 40px;
 	width: 260px;
 }
 
 .brand-item:first-child {
 	margin-left: 0px;
 }
-
-
 
 .brand-item:last-child {
 	margin-right: 0px;
@@ -576,59 +567,37 @@ th {
 	position: relative;
 }
 
-.line-item-1::before{
+.line-item::before{
 	content: "";
 	position: absolute;
 	background-color: #eee;
-	top: -77px;
-	left: 277px;
-	 
-	width: 2px;
-	height: 52px;	
-}
+	top: 25px;
+	left: -22px;
 
-.line-item-2::before{
-	content: "";
-	position: absolute;
-	background-color: #eee;
-	top: -77px;
-	left: 577px;
-	 
 	width: 2px;
-	height: 52px;	
-}
-
-.line-item-3::before{
-	content: "";
-	position: absolute;
-	background-color: #eee;
-	top: -77px;
-	right: 280px;
-	 
-	width: 2px;
-	height: 52px;	
+	height: 52px;
 }
 
 .map {
 	position: relative;
-	height: 416px; 
+	height: 416px;
 	margin-bottom: 70px;
 }
 
 .map-image {	
 	width: 100%;
-    height: 100%;
-    vertical-align: middle;
-    text-align: center;
+	height: 100%;
+	vertical-align: middle;
+	text-align: center;
 	margin: 0;
 	padding: 0;
 }
 
 .map-image::after {
-	content: '';
-    display: inline-block;
-    height: 100%;
-    vertical-align: middle;
+	content: "";
+	display: inline-block;
+	height: 100%;
+	vertical-align: middle;
 }
 
 .map-image-item {
@@ -636,33 +605,36 @@ th {
 }
 
 .container-contacts {
-	
 	position: absolute;
-		top: 55px;
-		
+	top: 55px;
+
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	
-	
+
 	width: 318px;
 	min-height: 310px;
 	background-color: #ffffff; 
-	
 }
 
 .title-contacts {
 	text-transform: uppercase;
-	margin-bottom: 20px;
-	margin-left: 0px;
+	margin-bottom: 24px;
 	margin-top: -3px;
 }
 
 .footer-contacts {
-	margin-top: 3px;
-	margin-left: 2px;
-	margin-bottom: 21px;
 	text-align: left;
+	margin-left: 2px;
+}
+
+.adress-item {
+	margin-bottom: 18px;
+	margin-left: 2px;
+}
+
+.number-item {
+	margin-bottom: 38px;
 }
 
 .container-info-contacts {
@@ -673,7 +645,7 @@ th {
 
 .main-footer .container {
 	display: flex;
-	flex-wrap: wrap;	
+	flex-wrap: wrap;
 	margin-bottom: 80px;
 }
 
@@ -684,7 +656,7 @@ th {
 	margin: 0;
 	width: 300px;
 	min-height: 80px;
-	margin-right: 60px;		
+	margin-right: 60px;
 }
 
 .social-button {
@@ -695,7 +667,6 @@ th {
 	height : 78px;
 	border-radius: 50%;
 	background-color: #e1e1e1;
-	
 	margin-right: 13px;
 }
 
@@ -741,9 +712,9 @@ th {
 .filter-item {
 	margin: 0;
 	padding: 0;
-  
+
 	border: none;
-  
+
 	width: 260px;
 	margin: 50px auto; 
 }
@@ -762,15 +733,15 @@ th {
 
 .range-controls {
 	position: relative;
-  
+
 	height: 41px;
 	margin-bottom: 15px;
 	padding-top: 39px;
 	padding-right: 20px;
 	padding-left: 20px;
-  
+
 	background-color: #f1f1f1;
-  
+
 	border-radius: 5px;
 }
 
@@ -791,7 +762,7 @@ th {
 	position: absolute;
 	top: 31px;
 	left: 0;
-  
+
 	width: 4px;
 	height: 4px;
 	padding: 0;
@@ -818,7 +789,7 @@ th {
 .price-controls label {
 	display: inline-block;
 	width: 50%;
-  
+
 	font-size: 16px;
 	text-transform: uppercase;
 }
@@ -827,12 +798,12 @@ th {
 	width: 60px;
 	padding: 8px 10px;
 	margin-left: 10px;
-  
+
 	font-family: Roboto, Arial, sans-serif;
 	font-size: 16px;
 	text-align: center;
 	color: #283136;
-  
+
 	border: none;
 	border-radius: 5px;
 	background: #f1f1f1;
@@ -861,7 +832,6 @@ input[type="radio"].visually-hidden {
 }
 
 .main-catalog-header {
-	
 	min-height: 305px;
 	background-color: #eeeeee;
 	margin: 0 auto;
@@ -870,28 +840,26 @@ input[type="radio"].visually-hidden {
 }
 
 .main-header-title {
-	margin-top: 70px;	
+	margin-top: 70px;
 	text-align: center;
 }
 
 .catalog-left-column {
-	margin-top: 0; 
+	margin-top: 0;
 	padding: 0;
 }
 
 .filter {
 	width: 300px;
-	margin: 0; 
+	margin: 0;
 	padding: 0;
 	margin-right: 60px;
 }
 
 .filter-title {
 	position: relative;
-	
+
 	top: -3px;
-	margin-left: 4px;
-	padding: 0;
 }
 
 .filter fieldset {
@@ -901,7 +869,7 @@ input[type="radio"].visually-hidden {
 	border: none;
 }
 
-.filter fieldset:nth-child(2) {	
+.filter fieldset:nth-child(2) {
 	margin-bottom: 22px;
 }
 
@@ -945,7 +913,7 @@ input[type="radio"].visually-hidden {
 .filter-input-radio + label::before {
 	content: "";
 	position: absolute;
-  
+
 	left: -36px;
 	top: -4px;
 
@@ -955,7 +923,6 @@ input[type="radio"].visually-hidden {
 
 	border: 4px solid #000000;
 	opacity: 0.4;
-	
 }
 
 .filter-input-radio:checked + label::after {
@@ -965,11 +932,11 @@ input[type="radio"].visually-hidden {
 
 	top: 4px;
 	left: -28px;
-  
+
 	width: 8px;
 	height: 8px;
 	border-radius: 50%;
-  
+
 	background-color: #283136;
 	opacity: 0.4;
 }
@@ -1016,9 +983,8 @@ input[type="radio"].visually-hidden {
 }
 
 .filter-input-radio:disabled + label::before {
-	opacity: 0;
+	opacity: 0.1;
 }
-	
 
 .filter-input-checkbox:checked + label::before {
 	opacity: 0;
@@ -1034,7 +1000,6 @@ input[type="radio"].visually-hidden {
 
 .filter-input:disabled +label {
 	color: #283136;
-	
 }
 
 .button-show {
@@ -1056,7 +1021,7 @@ input[type="radio"].visually-hidden {
 }
 
 .button-show {
-	margin-left: 0px;	
+	margin-left: 0px;
 }
 
 .catalog-right-column {
@@ -1067,14 +1032,13 @@ input[type="radio"].visually-hidden {
 
 .column-container-menu {
 	display: flex;
-	
+
 	align-items: center;
 	flex-wrap: wrap;
 	justify-content: space-between;
 	margin: 0;
-	padding:0;
+	padding: 0;
 	margin-bottom: 50px;
-	
 }
 
 .list-item	{
@@ -1084,7 +1048,6 @@ input[type="radio"].visually-hidden {
 	padding: 0;
 	margin: 0;
 	padding-left: 240px;
-	
 }
 
 .menu-info-item:last-child {
@@ -1118,7 +1081,7 @@ input[type="radio"].visually-hidden {
 	margin: 0;
 	padding: 0;
 	display: flex;
-	flex-wrap: wrap;	
+	flex-wrap: wrap;
 }
 
 .arrow {
@@ -1155,13 +1118,12 @@ input[type="radio"].visually-hidden {
 .arrow-down {
 	opacity: 1;
 	padding-left: 0px;
-	padding-right: 0px;	
+	padding-right: 0px;
 }
 
 .arrow-up {
-	
 	padding-left: 0px;
-	padding-right: 0px;	
+	padding-right: 0px;
 }
 
 .image-item {
@@ -1170,14 +1132,10 @@ input[type="radio"].visually-hidden {
 	justify-content: flex-end;
 	margin: 0;
 	padding:0;
-	margin-bottom: 45px;
+	margin-bottom: 100px;
 }
 
-.catalog-image  {
-	
-	top: 0px;
-	left: 0px;
-	
+.catalog-image {
 	width: 360px;
 	height: 1px;
 	margin: 0;
@@ -1185,22 +1143,20 @@ input[type="radio"].visually-hidden {
 	fill-opacity: 0.12;
 }
 
-
-
-.catalog-image:hover > .catalog-item-block  {
+.catalog-image:hover > .catalog-item-block {
 	display: flex;
-	opacity: 1;
-	display: flex;
+	flex-wrap: wrap;
 	align-items: center;
+	opacity: 1;
 }
 
-.catalog-image:hover path {
+.option-item:hover path {
 	fill-opacity: 1;
 }
 
 .catalog-image-item {
 	position: relative;
-	
+
 	top: -7px;
 	left: 0px;
 	width: 360px;
@@ -1216,17 +1172,20 @@ input[type="radio"].visually-hidden {
 
 .option-item {
 	position: relative;
+
+	display: flex;
+	flex-wrap: wrap;
 	margin: 0;
 	padding: 0;
 	width: 360px;
 	min-height: 576px;
-	margin-bottom: 20px;
+	margin-bottom: 73px;
 	margin-right: 40px;
 }
 
 .option-item:nth-child(5),
 .option-item:nth-child(6) {
-	margin-bottom: 0;	
+	margin-bottom: 0;
 }
 
 .option-item:nth-child(2n) {
@@ -1238,63 +1197,67 @@ input[type="radio"].visually-hidden {
 
 .catalog-item-block {
 	position: absolute;
-	top: 385px;
-	left: 0;
-	
+	bottom: -40px;
+
 	margin: 0;
 	padding: 0;
-	
-	display: flex;
-	flex-wrap: wrap;
-	flex-direction: column;
-	align-items: center;
-	
-	
+
+	display: inline-block;
 	width: 360px;
 	min-height: 230px;
-	
+
 	cursor: pointer;
 	background-color: #eeeeee;
 	opacity: 0;
 }
 
 .catalog-item-title {
-	margin-top: 28px;
-	margin-bottom: 15px;
+	margin-top: 20px;
+	margin-left: 143px;
 	text-transform: uppercase;
 	font-weight: 700;
 	font-size: 18px;
-    line-height: 30px;
+	line-height: 30px;
+	margin-right: 2px;
+}
+
+.catalog-item-title-3 {
+	margin-top: 20px;
+	margin-left: 123px;
+	text-transform: uppercase;
+	font-weight: 700;
+	font-size: 18px;
+	line-height: 30px;
 	margin-right: 2px;
 }
 
 .catalog-item-info {
-	margin: 0;
-	padding: 0;
-	margin-left: 60px;
-	margin-right: 60px;
-	margin-bottom: 30px;
+	margin: 0 auto;
+	padding: 0 12px;
+
 	text-align: center;
 	font-weight: 400;
 	font-size: 16px;
-    line-height: 18px;
+	line-height: 18px;
 }
-.block-active,
-.catalog-active {
-	fill-opacity: 1;
-	opacity: 1;
+
+.catalog-btn {
+	margin: 0 auto;
+	margin-top: 16px;
+	margin-bottom: 37px;
 }
+
  /*Пагинация*/
 .pagination-list {
 	display: flex;
 	flex-wrap: wrap;
-  
+
 	padding: 0;
 	margin: 0;
 
 	list-style: none;
 	margin-left: 40px;
-	margin-bottom: 60px; 
+	margin-bottom: 60px;
 }
 
 .pagination-item {
@@ -1306,7 +1269,7 @@ input[type="radio"].visually-hidden {
 	padding: 13px 20px;
 	text-transform: uppercase;
 	font-weight: 500;
-	color: #000000;	
+	color: #000000;
 	background-color: #eeeeee;
 }
 
@@ -1318,10 +1281,10 @@ input[type="radio"].visually-hidden {
 
 .pagination-item a:hover,
 .pagination-item a:focus {
-	background-color: #dfdfdf;	
+	background-color: #dfdfdf;
 	border-radius: 3px;
 }
-.pagination-item a:active {	
+.pagination-item a:active {
 	background-color: #dfdfdf;
 	color: rgba(0, 0, 0, 0.3);
 	box-shadow: 0px 3px rgba(0, 0, 0, 0.1) inset;
@@ -1332,12 +1295,12 @@ input[type="radio"].visually-hidden {
 	border: 3px solid #dbdbdb;
 	background-color: #ffffff;
 	border-radius: 3px;
-	 display: block;
+	display: block;
 	padding: 10px 17px;
 	text-transform: uppercase;
 	font-weight: 500;
 	color: #000000;
-	 margin-right: 11px;
+	margin-right: 11px;
 }
 
 
@@ -1364,7 +1327,7 @@ input[type="radio"].visually-hidden {
 .slider {
 	position: relative;
 	bottom: 0px;
-  
+
 	background-color: #eeeeee;
 }
 
@@ -1373,7 +1336,7 @@ input[type="radio"].visually-hidden {
 	left: 50%;
 	bottom: 104px;
 	z-index: 100;
-  
+
 	width: 160px;
 	height: 18px;
 
@@ -1384,36 +1347,36 @@ input[type="radio"].visually-hidden {
 
 .slider-controls label {
 	position: relative;
-  
+
 	display: inline-block;
 	width: 18px;
 	height: 18px;
 	padding: 8px;
-  
+
 	border-radius: 50%;
 	cursor: pointer;
 }
 
 .slider-controls label::after {
 	content: "";
-  
+
 	position: absolute;
 	top: 8px;
 	left: 8px;
 	z-index: 1;
-  
+
 	width: 18px;
 	height: 18px;
-  
+
 	background: #ffffff;
-  
+
 	border-radius: 50%;
 }
 
 .slider-list {
 	margin: 0;
 	padding: 0;
-  
+
 	list-style: none;
 }
 
@@ -1472,7 +1435,7 @@ input[type="radio"].visually-hidden {
 	max-width: 600px;
 	margin: 0;
 	margin-bottom: 27px;
-  
+
 	font-size: 55px;
 	line-height: 55px;
 	font-weight: 500;
@@ -1487,16 +1450,14 @@ input[type="radio"].visually-hidden {
 /*Скрытая форма*/
 
 .modal {
-    position: fixed;
-	
-    
-    box-shadow: 0 20px 40px 0 rgba(0, 1, 1, .75);
-    background-color: #ffffff;
-	
-	
+	position: fixed;
+
+	box-shadow: 0 20px 40px 0 rgba(0, 1, 1, .75);
+	background-color: #ffffff;
+
 	 top: 50%;
-    left: 50%;
-	
+	left: 50%;
+
 	transform: translate(-50%, -50%);
 	margin: 0;
 	padding: 0;
@@ -1507,8 +1468,6 @@ input[type="radio"].visually-hidden {
 	padding-bottom: 85px;
 	margin: 0 auto;
 	z-index: 1000;
-	
-
 }
 
 .modal-close {
@@ -1524,17 +1483,17 @@ input[type="radio"].visually-hidden {
 
 	cursor: pointer;
 	border: none;
-    outline: none;
+	outline: none;
 }
 
 .modal-close::before,
 .modal-close::after {
 	content: "";
-	
+
 	position: absolute;
 	top: 80px;
 	left: -80px;
-	
+
 	width: 21px;
 	height: 3px;
 
@@ -1556,13 +1515,11 @@ input[type="radio"].visually-hidden {
 }
 
 .form-info {
-	
 	display: flex;
 	flex-wrap: wrap;
 }
 
 .modal-feedback-column {
-	
 	display: flex;
 	flex-direction: column;
 	width: 360px;
@@ -1574,7 +1531,7 @@ input[type="radio"].visually-hidden {
 	margin-right: 0px;
 }
 
-.modal-feedback-column:nth-child(3) {	
+.modal-feedback-column:nth-child(3) {
 	margin-bottom: 48px;
 }
 
@@ -1604,19 +1561,13 @@ textarea {
 	font: inherit;
 }
 
-.modal-login input[type="text"]:placeholder,
-.modal-login input[type="email"],
-textarea {
-
- }
- 
-textarea,	
+textarea,
 .modal-login input:required{
 	padding: 15px;
 	color: #444444;
 	border: 2px solid #b4b9bb;
 	opacity: 0.5;
-}	
+}
 
 textarea:hover,
 .modal-login input:hover {
@@ -1627,21 +1578,20 @@ textarea:focus,
 .modal-login input:focus {
 	border: 2px solid #000000;
 	opacity: 1;
-	
 }
 
 
 textarea:focus::placeholder,
- .modal input:focus::placeholder {  
-		color: red;		
-		opacity: 1;
+.modal input:focus::placeholder {
+	color: red;
+	opacity: 1;
 }
 
 textarea:invalid:focus,
- .modal input:invalid:focus {  
-		outline-color: red;
-		border:none;
-		opacity: 1;
+ .modal input:invalid:focus {
+	outline-color: red;
+	border:none;
+	opacity: 1;
 }
 
 .modal-close:hover::before,
@@ -1654,38 +1604,34 @@ textarea:invalid:focus,
  .modal-close:focus::after {
 	background-color: #fb565a;
 	opacity: 0.1;
-	border: #ffffff;	
+	border: #ffffff;
 }
 
 ::-webkit-input-placeholder {
-    color: black;
+	color: black;
 }
 
 ::-moz-placeholder {
-    color: black;
+	color: black;
 }
 
-:-moz-placeholder {
-    color: black;
+:-moz-input-placeholder {
+	color: black;
 }
 
 :-ms-input-placeholder {
-    color: black;
+	color: black;
 }
 
 textarea:focus::placeholder,
- .modal input:focus::placeholder {  
-		color: red;		
-		opacity: 1;
+ .modal input:focus::placeholder {
+	color: red;
+	opacity: 1;
 }
 
 textarea:invalid:focus,
- .modal input:invalid:focus {  
-		outline-color: red;
-		border:none;
-		opacity: 1;
+.modal input:invalid:focus {
+	outline-color: red;
+	border:none;
+	opacity: 1;
 }
-
-
-
-
